# AoC24

./: Cargo.toml  README.md
nix/modules/: devshell.nix  rust.nix
src/: day1.rs  main.rs
src/day1/: mod.rs
